Enhance mobile navigation and optimize images
Added a hamburger menu for mobile navigation and lazy loading for images.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
         <p>Programmer/Editor/Freelancer</p>
       </header>
 
+    <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
       <!-- Navigation Buttons -->
       <nav class="tab-nav">
         <button class="tab-button active" data-target="profile">Profile</button>
@@ -34,7 +40,7 @@
         <section id="profile" class="tab-content active-content">
           <h2>About Me</h2>
           <div class="profile-content">
-            <img src="IMAGE/Professional.png" alt="Profile Picture" />
+            <img src="IMAGE/Professional.png" alt="Profile Picture" loading="lazy" />
             <div>
               <p>
                 Hello! Saya <strong>Muhammad Amien Nurcahya</strong>, seorang
@@ -63,6 +69,7 @@
               <img
                 src="IMAGE/PORJECT 1.png"
                 alt="Project 1"
+                loading="lazy"
               />
               <h3>Web Music Player</h3>
               <p>A fully functional music player design for web usage.</p>
@@ -71,6 +78,7 @@
               <img
                 src="https://via.placeholder.com/400x250.png?text=Project+2"
                 alt="Project 2"
+                loading="lazy"
               />
               <h3>Task Management App</h3>
               <p>
@@ -81,6 +89,7 @@
               <img
                 src="https://via.placeholder.com/400x250.png?text=Project+3"
                 alt="Project 3"
+                loading="lazy"
               />
               <h3>Weather Dashboard</h3>
               <p>
@@ -98,26 +107,32 @@
             <img
               src="IMAGE/IMG-20230207-WA0009.jpg"
               alt="Gallery Image 1"
+              loading="lazy"
             />
             <img
               src="IMAGE/IMG-20230430-WA0023.jpg"
               alt="Gallery Image 2"
+              loading="lazy"
             />
             <img
               src="IMAGE/IMG-20241122-WA0033.jpg"
               alt="Gallery Image 3"
+              loading="lazy"
             />
             <img
               src="IMAGE/IMG-20250621-WA0317.jpg"
               alt="Gallery Image 4"
+              loading="lazy"
             />
             <img
               src="IMAGE/IMG-20250621-WA0389.jpg"
               alt="Gallery Image 5"
+              loading="lazy"
             />
             <img
               src="IMAGE/Graduation With MaBRO.jpg"
               alt="Gallery Image 6"
+              loading="lazy"
             />
           </div>
         </section>
@@ -145,3 +160,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
