Fix formatting issues in index.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="project-card">
               <img
-                src="https://via.placeholder.com/400x250.png?text=Project+2"
+                src="IMAGE/MUSEUM CORVETTE.png"
                 alt="Project 2"
                 loading="lazy"
               />
@@ -160,4 +160,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
