Revise project details and correct typos
Updated project descriptions and fixed typos.

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                 alt="Project 2"
                 loading="lazy"
               />
-              <h3>Task Management App</h3>
+              <h3>Corvette Showcase Web</h3>
               <p>
-                A sleek and intuitive app for managing daily tasks and projects.
+                A website design for showcasing all corvette model (Engine mods, Bodykit, RaceTeam)
               </p>
             </div>
             <div class="project-card">
@@ -160,5 +160,6 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
