Revise profile details and fix typos in index.html
Updated personal information and corrected minor typos in the profile section.

--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
             <div>
               <p>
                 Hello! Saya <strong>Muhammad Amien Nurcahya</strong>, seorang
-                Mahasiswa di Universitas Pamulang. Saya berasal dari Jakarta
+                Mahasiswa di Universitas Pamulang, Jurusan Ilmu Komputer, Prodi Sistem Informasi. Saya
+                memulai masa kuliah saya pada tahun 2025. Saya berdomisili di Jakarta
                 Selatan. Lulusan tahun 2025 dari SMA Waskito. Saya merupakan
                 seorang programmer yang cukup menguasai bagian <i>frontend</i>
-                Membuat beberapa project dan lain-lain</br>
+                .Membuat beberapa project dan lain-lain</br>
               </p>
               <ul>
                 <h3>Skills</h3>
@@ -160,6 +161,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
